# airflow

./: .gitignore  pyproject.toml  readme.md
dags/: .py  create_table.sql  sch_xcom.py  user_processing.py
